# CI_example

./: .gitignore  CMakeLists.txt
.github/workflows/: blank.yml  cmake_example.yml
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  is_odd_unittest.cpp
